Enhance test coverage.